[workspace]
members = [
  "crates/ursa",
  "crates/ursa-gateway",
  "crates/ursa-index-provider",
  "crates/ursa-metrics",
  "crates/ursa-network",
  "crates/ursa-rpc-service",
  "crates/ursa-store",
  "crates/ursa-tracker",
]

exclude = [
  "infra",
  "test-plans",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0.67"
async-fs = "1.6.0"
async-trait = "0.1.60"
axum = { version = "0.6.1", features = ["multipart", "headers"] }
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
base64 = "0.20.0"
bincode = "1.3.3"
bytes = "1.3.0"
cid = "0.8.6"
clap = { version = "4.0.29", features = ["derive"] }
ctrlc = "3.2.4"
db = { package = "forest_db", version = "0.2.0", git = "https://github.com/theBeardA/forest-rocksdb", branch = "chore/upgrade-db", features = ["rocksdb"] }
dirs = "4"
dotenv = "0.15.0"
fnv = "1.0.7"
forest_encoding = "0.2.2"
forest_ipld = "0.1.1"
futures = "0.3.25"
futures-util = "0.3.25"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_car = "0.6.0"
fvm_ipld_encoding = "0.3.0"
hyper = { version = "0.14.23", features = ["full"] }
hyper-tls = "0.5.0"
jsonrpc-v2 = "0.11.0"
lazy_static = "1.4"
libipld = "0.14.0"
libipld-core = "0.14.0"
libp2p = { version = "0.50.0", default-features = false }
libp2p-bitswap = "0.25.0"
libipld-cbor = "0.14.0"
libp2p-swarm = "0.41.1"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
prometheus = "0.13.3"
pem = "1.1.0"
prometheus-client = "0.18.0"
rand = "0.8.5"
resolve-path = "0.1.0"
serde_derive = "1.0.147"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde_with = { version = "2.1.0", features = ["base64"] }
simple_logger = "4.0.0"
structopt = "0.3"
surf = { version = "2.3.2", default-features = true, features = ["curl-client"] }
thiserror = "1.0.30"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
tokio-stream = "0.1"
toml = "0.5.10"
tower = "0.4.13"
tower-http = "0.3.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
