[workspace]
members = [
  "crates/ursa",
  "crates/ursa-application",
  "crates/ursa-consensus",
  "crates/ursa-gateway",
  "crates/ursa-index-provider",
  "crates/ursa-metrics",
  "crates/ursa-network",
  "crates/ursa-proxy",
  "crates/ursa-rpc-service",
  "crates/ursa-store",
  "crates/ursa-telemetry",
  "crates/ursa-utils",
]

exclude = [
  "infra",
  "test-plans",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/fleek-network/ursa"

[workspace.dependencies]
anyhow = "1.0.67"
async-fs = "1.6.0"
async-trait = "0.1.60"
axum = { version = "0.6.17", features = ["multipart", "headers"] }
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
base64 = "0.13.0"
bincode = "1.3.3"
bytes = "1.3.0"
clap = { version = "4.0.29", features = ["derive"] }
console-subscriber = "0.1.8"
ctrlc = "3.2.4"
db = { package = "forest_db", git = "https://github.com/ChainSafe/forest", rev = "3e682310482718182cb2495fbaec5e575e5884e5", features = ["rocksdb"] }
dirs = "5"
dotenv = "0.15.0"
ethers = "2.0.0"
integer-encoding = "3.0.4"
ipld_traversal = { git = "https://github.com/kckeiks/rs-graphsync.git", rev = "21b3579cf19dccf428787304dd75ebcd0fb5adb7" }
fastmurmur3 = "0.1.2"
fnv = "1.0.7"
futures = "0.3.25"
futures-util = "0.3.25"
fvm_ipld_blockstore = "0.1"
fvm_ipld_car = "0.6"
fvm_ipld_encoding = "0.3.3"
geoutils = "0.5"
graphsync = { git = "https://github.com/kckeiks/rs-graphsync.git", rev = "21b3579cf19dccf428787304dd75ebcd0fb5adb7" }
hyper = { version = "0.14.23", features = ["full"] }
hyper-tls = "0.5.0"
imara-diff = "0.1.5"
itertools = "0.10.5"
jsonrpc-v2 = "0.11.0"
lazy_static = "1.4"
libipld = { version = "0.14.0", features = ["serde-codec"] }
libipld-core = "0.14.0"
libp2p = { version = "0.50.1", default-features = false }
libp2p-bitswap = "0.25.0"
libipld-cbor = "0.14.0"
libp2p-swarm = "0.42.0"
lru = "0.10.0"
maxminddb = "0.23"
moka = "0.10"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.11.0"
narwhal-types = { git = "https://github.com/MystenLabs/sui.git", rev = "aa957afb31054a24d3c220266fb8c92921e9a187", package = "narwhal-types" }
opentelemetry = "0.18.0"
opentelemetry-jaeger = "0.17.0"
ordered-float = "3.4"
prometheus = "0.13.3"
pem = "1.1.0"
prometheus-client = "0.19.0"
rand = "0.8.5"
resolve-path = "0.1.0"
compile-time-run = "0.2.12"
scalable_cuckoo_filter = { git = "https://github.com/matthias-wright/scalable_cuckoo_filter", rev = "fe691e06690549b545c18f975fa142700b58dc65", features = ["serde_support"] }
scopeguard = "1.1.0"
serde_derive = "1.0.147"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde_with = { version = "2.1.0", features = ["base64"] }
simple_logger = "4.0.0"
siphasher = "0.3"
structopt = "0.3"
surf = { version = "2.3.2", default-features = true, features = ["curl-client"] }
tendermint-proto = "0.23.7"
thiserror = "1.0.30"
tracing-opentelemetry = "0.18.0"
tokio = { version = "1.23.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
tokio-stream = "0.1"
toml = "0.7.1"
tower = "0.4.13"
tower-http = "0.4.0"
tracing-error = "0.2.0"
tracing = "0.1.37"
tracing-tree = "0.2.2"
tracing-chrome = "0.7.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
axum-tracing-opentelemetry = "0.10.0"
axum-prometheus = "0.3.0"

[patch.'https://github.com/MystenLabs/sui.git']
workspace-hack = { git = "https://github.com/fleek-network/empty-workspace-hack.git", rev = "c07eb1e343a455d57a5481b50eada03c62b4f2c6"}

[patch.'crates-io']
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "d8de86e991ad540e6f69ca417c27f7407198944f" }
snow = { git = "https://github.com/mcginty/snow", rev = "abf198913935decc5235e1c091571a3e1aebdf6c" }

[profile.release]
# 2 full, 0 nothing, 1 good enough.
debug = 1
# currently enabled, may increase build time, but runtime faster, can set to `"thin"`.
lto = true
# optimize for binary size, but also turn off loop vectorization.
opt-level = 'z'
# speeds up build time to offset some of the link time optimization.
codegen-units = 1
# strip debug info from binary.
strip = 'debuginfo'
# On panic terminate the process.
panic = 'abort'
