[package]
name = "ursa"
version = "0.1.0"
authors = ["theBeardA <arslan@fleek.co>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
ctrlc = "3.1"
futures = "0.3.21"
structopt = "0.3"
dotenv = "0.15.0"
anyhow = "1.0.57"
tracing = "0.1.33"
store = { path = "../store" }
tracing-subscriber = "0.3.11"
network = { path = "../network" }
db = { package = "forest_db", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
libp2p = { version = "0.44.0", default-features = false, features = ["identify", "serde"] }