[package]
name = "ursa"
version = "0.1.0"
edition = "2021"
authors = ["theBeardA <arslan@fleek.co>"]
license = "MIT"
repository = "https://github.com/Psychedelic/ursa"
description = "Ursa's cli"

[dependencies]
toml = "0.5"
ctrlc = "3.1"
futures = "0.3.21"
structopt = "0.3"
dotenv = "0.15.0"
anyhow = "1.0.57"
tracing = "0.1.33"
store = { path = "../store" }
tracing-subscriber = "0.3.11"
network = { path = "../network" }
rpc-client = { path = "../rpc-client" }
rpc-server = { path = "../rpc-server" }
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
libp2p = { version = "0.46.1", default-features = false, features = ["identify", "serde"] }
db = { package = "forest_db", version = "0.1", git = "https://github.com/theBeardA/forest-rocksdb", branch = "main", features = ["rocksdb"] }
service_metrics = { path = "../service-metrics" }
