[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]
license = "MIT"
repository = "https://github.com/Psychedelic/ursa"
description = "Ursa's proxy gateway"

[dependencies]
axum = "0.5.7"
tracing = "0.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.20.1", features = ["full"] }
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }