[package]
name = "network"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]
license = "MIT"
repository = "https://github.com/Psychedelic/ursa"
description = "Ursa's libp2p implementation"

[dependencies]
bytes = "1.1.0"
anyhow = "1.0.56"
futures = "0.3.21"
tracing = "0.1.33"
tiny-cid = "0.3.0"
jsonrpc-v2 = "0.11.0"
# Temp quic lib
libp2p-quic = "0.6.1"
async-trait = "0.1.53"
futures-util = "0.3.21"
libp2p-bitswap = "0.22.0"
ipld_blockstore = "0.1.1"
store = { path = "../store" }
async-std = { version = "1.11.0", features = ["attributes"] }

[dependencies.libipld]
version = "0.12.0"
default-features = false

[dependencies.libp2p]
version = "0.43.0"
default-features = false
features = [
    "autonat",
    "dns-async-std",
    "identify",
    "kad",
    "gossipsub",
    "metrics",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "relay",
    "request-response",
    "tcp-async-io",
    "yamux",
    "serde",
]

[dev-dependencies]
simple_logger = "2.1.0"
db = { package = "forest_db", version = "0.1" }