[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p =  { version = "0.43.0", default-features = false, features = [
    "ping",
    "kad",
    "gossipsub",
    "identify",
    "noise",
    "yamux",
    "mplex",
] }

futures = "0.3.21"
tiny-cid = "0.3.0"
async-trait = "0.1.53"
async-std = { version = "1.11.0", features = ["attributes"] }