[package]
name = "node"
version = "0.1.0"
authors = ["b0xtch <mahmoud@fleek.co>"]
edition = "2021"

[dependencies]
libp2p = "0.43.0"
anyhow = "1.0.56"
futures = "0.3.21"
tracing = "0.1.33"
tiny-cid = "0.3.0"
libipld = "0.13.1"
# Temp quic lib
libp2p-quic = "0.6.1"
async-trait = "0.1.53"
libp2p-bitswap = "0.22.0"
ipld_blockstore = "0.1.1"
async-std = { version = "1.11.0", features = ["attributes"] }
# jsonrpc-v2