[package]
name = "rpc-client"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]
license = "MIT"
repository = "https://github.com/Psychedelic/ursa"
description = "Ursa's rpc client implementation"

[dependencies]
anyhow = "1.0.57"
tiny-cid = "0.3.0"
serde_json = "1.0.81"
async-trait = "0.1.53"
network = { path = "../network" }
serde = { version = "1.0.137", features = ["derive"] }
