[package]
name = "rpc-server"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]
license = "MIT"
repository = "https://github.com/Psychedelic/ursa"
description = "Ursa's rpc server implementation"

[dependencies]
axum = "0.5.7"
bytes = "1.1.0"
anyhow = "1.0.56"
futures = "0.3.21"
tracing = "0.1.33"
jsonrpc-v2 = "0.11.0"
serde_json = "1.0.81"
async-trait = "0.1.53"
ipld_blockstore = "0.1.1"
store = { path = "../store" }
car_rs = { path = "../car-rs" }
network = { path = "../network" }
serde = { version = "1.0.137", features = ["derive"] }
# tiny-cid = { version = "0.3.0", features = ["serde-codec"] }
async-std = { version = "1.11.0", features = ["attributes"] }
tokio = { version = "1.19.2", features = ["rt", "net", "macros", "sync"] }

[dependencies.libipld]
version = "0.12.0"
default-features = false

[dev-dependencies]
simple_logger = "2.1.0"
db = { package = "forest_db", version = "0.1" }