[package]
name = "store"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]
license = "MIT"
repository = "https://github.com/Psychedelic/ursa"
description = "Ursa's store implementation"

[dependencies]
tracing = "0.1.35"
async-trait = "0.1.56"
ipld_blockstore = "0.1.1"
# libp2p-bitswap = "0.22.0"
libipld = { version = "0.12.0"}
async-std = { version = "1.11.0", features = ["attributes"] }
db = { package = "forest_db", version = "0.1", git = "https://github.com/theBeardA/forest-rocksdb", branch = "main", features = ["rocksdb"] }
#simple_logger = "2.2.0"

[dependencies.libp2p-bitswap]
version = "0.22.0"
git = "https://github.com/b0xtch/libp2p-bitswap"
rev = "a3779ea242816770433d37e77a69ac3afa3ce491"

[features]
default = ["rocksdb"]
rocksdb = ["db/rocksdb", "ipld_blockstore/rocksdb"]
