[package]
name = "ursa-application"
authors = ["DontKillRobots <dalton@fleek.xyz>,"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
futures.workspace = true
resolve-path.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
ethers.workspace = true

async-abci = { version = "0.1.8", default-features = false, features = [
    "tokio-backend",
] }
abci-rs = { version = "0.11.3", features = ["async-api"] }

revm = { version = "3.1.0", features = ["serde"] }
hex = "0.4.3"
tendermint-abci = { version = "0.23.7", features = ["client"] }
tendermint-proto = "0.23.7"
reqwest = "0.11.11"
parking_lot = "0.12.1"
ursa-utils = { path = "../ursa-utils" }
prost = { version = "0.10.4", default-features = false, features = [
    "prost-derive",
] }
