[package]
name = "ursa-application"
authors = ["DontKillRobots <dalton@fleek.xyz>,"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
futures.workspace = true
resolve-path.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
ethers.workspace = true

abci-rs = { version = "0.11.3", features = ["async-api"] }
revm = { version = "3.1.0", features = [
    "serde",
] }
hex = "0.4.3"
tendermint-abci = { version = "0.23.7", features = ["client"] }
tendermint-proto = "0.32.0"
reqwest = "0.11.11"
ursa-utils = { path = "../ursa-utils" }

