[package]
name = "ursa-consensus"
authors = ["b0xtch <mahmoud@fleek.co>", "Parsa Ghadimi <parsa@fleek.co>"]
description = "Ursa's consensus engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
narwhal-config.workspace = true 
narwhal-consensus.workspace = true
narwhal-crypto.workspace = true 
narwhal-executor.workspace = true
narwhal-primary.workspace = true
narwhal-worker.workspace = true
resolve-path.workspace = true
serde_json.workspace = true
tendermint-proto.workspace = true
tokio-util.workspace = true
tracing.workspace = true
arc-swap     = { version = "1.6.0", features = ["serde"] }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "9a41ba511899c0d7efd9e047af2e968cdc54f77d" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "9a41ba511899c0d7efd9e047af2e968cdc54f77d", package = "fastcrypto-zkp" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "9a41ba511899c0d7efd9e047af2e968cdc54f77d", package = "fastcrypto-tbls" }

futures      = "0.3.23"
multiaddr = "0.17.0"
mysten-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "3fe872b7a48995651b2a6a4167d32aeab69b7ca0", package = "mysten-metrics" }
mysten-network  = { git = "https://github.com/MystenLabs/sui.git", rev = "3fe872b7a48995651b2a6a4167d32aeab69b7ca0", package = "mysten-network" }
rand = "0.8.5"
serde        = { version = "1.0", features = ["derive"] }
tempfile = "3.3.0"
tendermint-abci = { version = "0.23.7", features = ["client"] }
tokio = { version = "1.24.2", features = ["sync", "rt", "macros"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
workspace-hack = { git = "https://github.com/MystenLabs/sui.git", rev = "3fe872b7a48995651b2a6a4167d32aeab69b7ca0", package = "workspace-hack" }
