[package]
name = "ursa-consensus"
authors = ["b0xtch <mahmoud@fleek.co>", "Parsa Ghadimi <parsa@fleek.co>"]
description = "Ursa's consensus engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
resolve-path.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
ursa-utils = { path = "../ursa-utils" }
ursa-application = { path = "../ursa-application" }
anyhow       = "1.0"
arc-swap     = { version = "1.6.0", features = ["serde"] }
async-trait  = "0.1"
bytes = "1.3.0"

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "27ee552d5c1feb02b6b64b4f77be3c84e82a0469" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "27ee552d5c1feb02b6b64b4f77be3c84e82a0469", package = "fastcrypto-zkp" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "27ee552d5c1feb02b6b64b4f77be3c84e82a0469", package = "fastcrypto-tbls" }

futures      = "0.3.23"
multiaddr = "0.17.0"
mysten-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "8aa5c0e5a495c950321855cf53f2c76b59250fd5", package = "mysten-metrics" }
mysten-network  = { git = "https://github.com/MystenLabs/sui.git", rev = "8aa5c0e5a495c950321855cf53f2c76b59250fd5", package = "mysten-network" }

narwhal-config = { git = "https://github.com/MystenLabs/sui.git", rev = "8aa5c0e5a495c950321855cf53f2c76b59250fd5", package = "narwhal-config" }
narwhal-consensus = { git = "https://github.com/MystenLabs/sui.git", rev = "8aa5c0e5a495c950321855cf53f2c76b59250fd5", package = "narwhal-consensus" }
narwhal-crypto = { git = "https://github.com/MystenLabs/sui.git", rev = "8aa5c0e5a495c950321855cf53f2c76b59250fd5", package = "narwhal-crypto" }
narwhal-executor = { git = "https://github.com/MystenLabs/sui.git", rev = "8aa5c0e5a495c950321855cf53f2c76b59250fd5", package = "narwhal-executor" }
narwhal-network = { git = "https://github.com/MystenLabs/sui.git", rev = "8aa5c0e5a495c950321855cf53f2c76b59250fd5", package = "narwhal-network" }
narwhal-node = { git = "https://github.com/MystenLabs/sui.git", rev = "8aa5c0e5a495c950321855cf53f2c76b59250fd5", package = "narwhal-node" }
narwhal-primary = { git = "https://github.com/MystenLabs/sui.git", rev = "8aa5c0e5a495c950321855cf53f2c76b59250fd5", package = "narwhal-primary" }
narwhal-types = { git = "https://github.com/MystenLabs/sui.git", rev = "8aa5c0e5a495c950321855cf53f2c76b59250fd5", package = "narwhal-types" }
narwhal-worker   = { git = "https://github.com/MystenLabs/sui.git", rev = "8aa5c0e5a495c950321855cf53f2c76b59250fd5", package = "narwhal-worker" }
prometheus = "0.13.3"
rand = "0.8.5"
serde        = { version = "1.0", features = ["derive"] }
tempfile = "3.3.0"
tendermint-abci = { version = "0.23.7", features = ["client"] }
tendermint-proto = "0.23.7"
tokio = { version = "1.24.2", features = ["sync", "rt", "macros","time"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tracing = "0.1.37"

warp = "0.3.2"
workspace-hack = { git = "https://github.com/MystenLabs/sui.git", rev = "aa957afb31054a24d3c220266fb8c92921e9a187", package = "workspace-hack" }
