[package]
name = "ursa-gateway"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]
license = "MIT"
repository = "https://github.com/fleek-network/ursa"
description = "Ursa's proxy gateway"

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
bincode.workspace = true
base64.workspace = true
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
cid.workspace = true
clap.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libp2p.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
bytes.workspace = true
ursa-telemetry = { path = "../ursa-telemetry" }
