[package]
name = "ursa-gateway"
authors = ["b0xtch <mahmoud@fleek.co>"]
description = "Ursa's proxy gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
axum-tracing-opentelemetry.workspace = true
bincode.workspace = true
base64.workspace = true
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
clap.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
libipld.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libp2p.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
bytes.workspace = true
ursa-telemetry = { path = "../ursa-telemetry" }
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
axum-prometheus.workspace = true
