[package]
name = "ursa-index-provider"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
async-trait = "0.1.53"
axum = "0.5.15"
base64 = "0.13.0"
bincode = "1.3.3"
bytes = "1.1.0"
cbor = "0.4.1"
cid = "0.8.6"
db = { package = "forest_db", version = "0.2.0", git = "https://github.com/theBeardA/forest-rocksdb", branch = "chore/upgrade-db", features = ["rocksdb"] }
dirs = "4"
forest_encoding = "0.2"
forest_ipld = "0.1"
fvm_ipld_blockstore = "0.1.1"
libipld = "0.14.0"
libipld-cbor = "0.14.0"
# libp2p = { version = "0.50.0", default-features = false, features = ["identify", "serde"] }
libp2p = "0.50.0"
multihash = { version = "0.16.3", features = ["identity"] }
rand = "0.8.4"
rustc-serialize = "0.3.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.74"
serde_with = { version = "1.11.0", features = ["base64"] }
surf = { version = "2.3", default-features = true, features = ["curl-client"] }
thiserror = "1.0.30"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36" 
ursa-store = { path = "../ursa-store" }
ursa-utils ={ path = "../ursa-utils" }
ursa-network = { path = "../ursa-network" }
futures = "0.3.21"
simple_logger = "4.0.0"

[dev-dependencies]
ursa-network = { path = "../ursa-network" }

