[package]
name = "ursa-index-provider"
authors = ["theBeardA <arslan@fleek.co>"]
description = "Ursa's global index provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-fs.workspace = true
async-trait.workspace = true
axum.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
bincode.workspace = true
bytes.workspace = true
db.workspace = true
dirs.workspace = true
futures.workspace = true
fvm_ipld_blockstore.workspace = true
fvm_ipld_car.workspace = true
fvm_ipld_encoding.workspace = true
libipld.workspace = true
libipld-cbor.workspace = true
libipld-core = { workspace = true, features = ["serde-codec"] }
libp2p.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
simple_logger.workspace = true
surf.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ursa-network = { path = "../ursa-network" }
ursa-store = { path = "../ursa-store" }
