[package]
name = "ursa-metrics"
authors = ["ossian <oz@fleek.xyz>", "mtavano <marcello@fleek.co>"]
description = "Ursa metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lazy_static.workspace = true
anyhow.workspace = true
axum.workspace = true
libp2p-swarm.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
prometheus-client.workspace =true
serde.workspace = true
tracing.workspace = true
libp2p-bitswap.workspace = true
prometheus.workspace = true

[dependencies.libp2p]
workspace = true
default-features = false
features = [
    "serde",
    "ping",
    "identify",
    "gossipsub",
    "request-response",
    "relay",
    "kad"
]
